--- a/css/main.css
+++ b/css/main.css
@@ -114,9 +114,11 @@ input::placeholder {
 }
 
 #mainSlide{
+    width: 1280px;
     height: 700px;
     position: relative;
-    transform: translateY(20%);
+    margin: 0 auto;
+    transform: translateY(20%) !important;
 }
 .carousel-item{
     height: 700px;
@@ -133,8 +135,167 @@ input::placeholder {
     font-size: 64px !important;
 }
 .slide1_contents{
+    margin-top: 20px;
+    /* line-height: 30px; */
     text-align: center;
 }
 .slide1_contents p{
     color: #fff;
 }
+.carousel-indicators>button{
+    width: 100px !important;
+}
+
+#s1_main_Login{
+    margin-top: 100px;
+    text-align: center;
+}
+
+#s1_main_Login>button{
+    background:#1AAB8A;
+    color:#fff;
+    border:none;
+    position:relative;
+    height:60px;
+    font-size:1.6em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+  }
+  #s1_main_Login>button:hover{
+    background:rgba(255, 255, 255, 0);
+    color:#fff;
+  }
+  #s1_main_Login>button:before,#s1_main_Login>button:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #fff;
+    transition:400ms ease all;
+  }
+  #s1_main_Login>button:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+  #s1_main_Login>button:hover:before,#s1_main_Login>button:hover:after{
+    width:100%;
+    transition:800ms ease all;
+  }
+  .slide2_main{
+      width: 100%;
+      height: 100%;
+  }
+  /* .slide2_main::after{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.4);
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  } */
+  .left_div{
+      width: 345.6px;
+      height: 100%;
+      float: left;
+      color: #fff;
+      padding-left: 38.4px;
+  }
+  .right_div{
+      width: 934.4px;
+      padding-left: 89.6px;
+      height: 100%;
+      float: left;
+  }
+  .right_div::after{
+      clear:both;
+  }
+
+  .left_div h1{
+      position: relative;
+      top: 30%;
+      transform: translateY(-50%);
+  }
+  .left_div p{
+    position: relative;
+    top: 30%;
+    transform: translateY(-50%);
+}
+.left_div>button{
+    background:#1AAB8A;
+    color:#fff;
+    border:none;
+    position:relative;
+    height:60px;
+    font-size:1.6em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+    margin-top: 300px;
+  }
+  .left_div>button:hover{
+    background:rgba(255, 255, 255, 0);
+    color:#fff;
+  }
+  .left_div>button:before,.left_div>button:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #fff;
+    transition:400ms ease all;
+  }
+  .left_div>button:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+  .left_div>button:hover:before,.left_div>button:hover:after{
+    width:100%;
+    transition:800ms ease all;
+  }
+
+
+  .right_div ul{
+      position: relative;
+      top: 50%;
+      width: 100%;
+      transform: translateY(-50%);
+      list-style: none;
+  }
+  .right_div ul li{
+      display: inline-block;
+      width: 180px;
+      height: 180px;
+      margin-left: 20px;
+  }
+  .right_div img{
+      width: 180px;
+      height: 180px;
+  }
+
+  .right_div li{
+        clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+        transform: rotate(90deg);
+  }
+  .right_div img{
+      transform: rotate(-90deg);
+  }
+  .right_div li:nth-child(4){
+      margin-left: 124px;
+  }
+
+
+  
