--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* My home nav*/
 
 #nav{
-    width: 1280px;
+    min-width: 1280px;
     height: 50px;
     /* border: 1px solid #fff; */
     position: fixed;
