--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 /* My home nav*/
-
+@media (min-width: 1281px) {
 #main{
     min-width: 1280px;
     overflow: hidden;
+    height: 100%;
 }
 #main::after{
     content: "";
@@ -10,15 +11,15 @@
     z-index: -1;
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 15%);
     width: 100%;
-    height: 969px;
+    height: 100%;
 }
 
 video{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
-    min-width: 1280px;
+    width: 1920px;
     height: auto;
 }
 
@@ -138,9 +139,12 @@ input::placeholder {
 #mainSlide{
     width: 1280px;
     height: 700px;
-    position: relative;
-    margin: 0 auto;
-    transform: translateY(20%) !important;
+    position: absolute;
+    left: auto;
+    right: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .carousel-item{
     height: 700px;
@@ -163,6 +167,9 @@ input::placeholder {
 }
 .slide1_contents p{
     color: #fff;
+}
+.carousel-indicators{
+    bottom: 10px !important;
 }
 .carousel-indicators>button{
     width: 100px !important;
@@ -431,3 +438,33 @@ input::placeholder {
       #s3_ul li:nth-child(2){
           margin-left: 50px;
       }
+    }
+
+@media (min-width: 768px) and (max-width: 1280px) {
+    video{
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        max-width: 1640px;
+        height: auto;
+    }
+    body{
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+    }
+    #main{
+        min-width: 768px;
+        overflow: hidden;
+        height: 100%;
+    }
+    #main::after{
+        content: "";
+        position: absolute;
+        z-index: -1;
+        background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 15%);
+        width: 100%;
+        height: 100%;
+    }
+}
