--- a/css/main.css
+++ b/css/main.css
@@ -3,24 +3,25 @@
 #main{
     min-width: 1280px;
     overflow: hidden;
-    height: 100%;
 }
-#main::after{
+/* #main::after{
     content: "";
     position: absolute;
     z-index: -1;
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 15%);
     width: 100%;
     height: 100%;
-}
+} */
 
 video{
     position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 1920px;
-    height: auto;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -9999;
+    transform: translateX(-50%) translateY(-50%);
+    filter: brightness(60%);
 }
 
 #nav{
@@ -140,11 +141,9 @@ input::placeholder {
     width: 1280px;
     height: 700px;
     position: absolute;
-    left: auto;
-    right: auto;
-    top: 50%;
+    top: 100px;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translateX(-50%);
 }
 .carousel-item{
     height: 700px;
@@ -295,8 +294,6 @@ input::placeholder {
     width:100%;
     transition:800ms ease all;
   }
-
-
   .right_div ul{
       position: relative;
       top: 50%;
@@ -309,17 +306,16 @@ input::placeholder {
       width: 180px;
       height: 180px;
       margin-left: 20px;
-      transition: 1s ease-in-out all;
   }
   .right_div img{
       width: 180px;
       height: 180px;
       cursor: pointer;
+      transition: 0.3s ease-out all;
   }
-  .right_div ul li:hover,.right_div img{
+  .right_div ul img:hover{
       transform: scale(1.1);
   }
-
   .right_div li{
         clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
   }
