테블릿 디자인 진행중..

--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,9 @@ input::placeholder {
       width: 100%;
       height: 100%;
   }
+  #M_BG{
+      display: none;
+  }
   /* .slide2_main::after{
     content: "";
     position: absolute;
@@ -438,29 +441,305 @@ input::placeholder {
 
 @media (min-width: 768px) and (max-width: 1280px) {
     video{
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        max-width: 1640px;
-        height: auto;
-    }
-    body{
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        z-index: -9999;
+        transform: translateX(-50%) translateY(-50%);
+        filter: brightness(60%);
     }
     #main{
         min-width: 768px;
         overflow: hidden;
-        height: 100%;
     }
-    #main::after{
-        content: "";
+    #nav{
+        min-width: 768px;
+        height: 50px;
+        /* border: 1px solid #fff; */
         position: absolute;
-        z-index: -1;
-        background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 15%);
-        width: 100%;
-        height: 100%;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fff;
+        z-index: 9999;
     }
+    #left_nav{
+        width: 50%;
+        float: left;
+        overflow: hidden;
+    }
+    #left_nav img{
+        cursor: pointer;
+        padding-left: 10px;
+    }
+    #right_nav{
+        width: 50%;
+        float: left;
+    }
+    #right_nav::after{
+        clear: both;
+        content: "";
+        position: relative;
+    }
+    #right_nav ul{
+        padding: 23px 0 0 0;
+        list-style: none;
+        text-align: right;
+        position: relative;
+    }
+    #right_nav ul li{
+        display: inline-block;
+        font-weight: bold;
+        margin: 0 30px 0 30px;
+        position: relative;
+        top: -7px;
+    }
+    #right_nav li h5{
+        cursor: pointer;
+    }
+    /*검색*/
+.SearchBox{
+    width: 300px;
+    height: 30px;
+    float: left;
+    position: relative;
+    top: 5px;
+    margin-left: -100%;
+}
+#Search{
+    width: 300px;
+    height: 30px;
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+#Search:focus{
+    outline: none;
+}
+input[type="search"]::-webkit-search-cancel-button {
+    /* 검색창 X표시 지우기 */
+    display: none;
+  }
+#searchIcon{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 20px;
+}
+#searchIcon:hover{
+    cursor: pointer;
+}
+input::placeholder {
+    color: rgba(255, 255, 255, 0.5);
+}
+.rotate{
+    animation:1s ease-in-out rotate1;
+}
+@keyframes rotate1{
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+        transform:rotate(360deg);
+    }
+}
+.back{
+    animation:1s ease-in-out rotate2;
+}
+@keyframes rotate2{
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+        transform:rotate(360deg);
+    }
+}
+
+#mainSlide{
+    width: 768px;
+    height: 600px;
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.carousel-item{
+    height: 600px;
+}
+.slideBtn{
+    width: 100px !important;
+}
+.slide1_title{
+    margin-top: 150px;
+    text-align: center;
+}
+.slide1_title h1{
+    color: #fff;
+    font-size: 64px !important;
+}
+.slide1_contents{
+    margin-top: 20px;
+    /* line-height: 30px; */
+    text-align: center;
+}
+.slide1_contents p{
+    color: #fff;
+}
+.carousel-indicators{
+    bottom: 10px !important;
+}
+.carousel-indicators>button{
+    width: 100px !important;
+}
+
+#s1_main_Login{
+    margin-top: 100px;
+    text-align: center;
+}
+
+#s1_main_Login>button{
+    background:#1AAB8A;
+    color:#fff;
+    border:none;
+    position:relative;
+    height:60px;
+    font-size:1.6em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+  }
+  #s1_main_Login>button:hover{
+    background:rgba(255, 255, 255, 0);
+    color:#fff;
+  }
+  #s1_main_Login>button:before,#s1_main_Login>button:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #fff;
+    transition:400ms ease all;
+  }
+  #s1_main_Login>button:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+  #s1_main_Login>button:hover:before,#s1_main_Login>button:hover:after{
+    width:100%;
+    transition:800ms ease all;
+  }
+
+.slide2_main{
+    width: 100%;
+    height: 100%;
+}
+/* .slide2_main::after{
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+} */
+.left_div{
+    width: 230.4px;
+    height: 100%;
+    float: left;
+    color: #fff;
+    padding-left: 38.4px;
+}
+.left_div h1{
+    font-size: 32px;
+}
+.right_div{
+    width: 537.6px;
+    padding-left: 89.6px;
+    height: 100%;
+    float: left;
+}
+.right_div::after{
+    clear:both;
+}
+
+.left_div h1{
+    position: relative;
+    top: 30%;
+    transform: translateY(-50%);
+}
+.left_div p{
+  position: relative;
+  top: 30%;
+  transform: translateY(-50%);
+}
+.left_div>button{
+  background:#d48d5d;
+  color:#fff;
+  border:none;
+  position:relative;
+  height:60px;
+  font-size:1.6em;
+  padding:0 2em;
+  cursor:pointer;
+  transition:800ms ease all;
+  outline:none;
+  margin-top: 300px;
+}
+.left_div>button:hover{
+  background:rgba(255, 255, 255, 0);
+  color:#fff;
+}
+.left_div>button:before,.left_div>button:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: #fff;
+  transition:400ms ease all;
+}
+.left_div>button:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+.left_div>button:hover:before,.left_div>button:hover:after{
+  width:100%;
+  transition:800ms ease all;
+}
+
+#XL_BG{
+    display: none;
+}
+
+#M_BG{
+    width: 100%;
+    height: 400px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 1px solid #fff;
+}
+
+
 }
