--- a/css/main.css
+++ b/css/main.css
@@ -222,17 +222,6 @@ input::placeholder {
   #M_BG{
       display: none;
   }
-  /* .slide2_main::after{
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.4);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-  } */
   .left_div{
       width: 345.6px;
       height: 100%;
@@ -259,76 +248,76 @@ input::placeholder {
     position: relative;
     top: 30%;
     transform: translateY(-50%);
-}
-.left_div>button{
-    background:#d48d5d;
-    color:#fff;
-    border:none;
-    position:relative;
-    height:60px;
-    font-size:1.6em;
-    padding:0 2em;
-    cursor:pointer;
-    transition:800ms ease all;
-    outline:none;
-    margin-top: 300px;
-  }
-  .left_div>button:hover{
-    background:rgba(255, 255, 255, 0);
-    color:#fff;
-  }
-  .left_div>button:before,.left_div>button:after{
-    content:'';
-    position:absolute;
-    top:0;
-    right:0;
-    height:2px;
-    width:0;
-    background: #fff;
-    transition:400ms ease all;
-  }
-  .left_div>button:after{
-    right:inherit;
-    top:inherit;
-    left:0;
-    bottom:0;
-  }
-  .left_div>button:hover:before,.left_div>button:hover:after{
-    width:100%;
-    transition:800ms ease all;
-  }
-  .right_div ul{
-      position: relative;
-      top: 50%;
-      width: 100%;
-      transform: translateY(-50%);
-      list-style: none;
-  }
-  .right_div ul li{
-      display: inline-block;
-      width: 180px;
-      height: 180px;
-      margin-left: 20px;
-  }
-  .right_div img{
-      width: 180px;
-      height: 180px;
-      cursor: pointer;
-      transition: 0.3s ease-out all;
-  }
-  .right_div ul img:hover{
-      transform: scale(1.1);
-  }
-  .right_div li{
-        clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  }
-  .right_div li:nth-child(4){
-      margin-left: 124px;
-  }
+    }
+    .left_div>button{
+        background:#d48d5d;
+        color:#fff;
+        border:none;
+        position:relative;
+        height:60px;
+        font-size:1.6em;
+        padding:0 2em;
+        cursor:pointer;
+        transition:800ms ease all;
+        outline:none;
+        margin-top: 300px;
+    }
+    .left_div>button:hover{
+        background:rgba(255, 255, 255, 0);
+        color:#fff;
+    }
+    .left_div>button:before,.left_div>button:after{
+        content:'';
+        position:absolute;
+        top:0;
+        right:0;
+        height:2px;
+        width:0;
+        background: #fff;
+        transition:400ms ease all;
+    }
+    .left_div>button:after{
+        right:inherit;
+        top:inherit;
+        left:0;
+        bottom:0;
+    }
+    .left_div>button:hover:before,.left_div>button:hover:after{
+        width:100%;
+        transition:800ms ease all;
+    }
+    .right_div ul{
+        position: relative;
+        top: 50%;
+        width: 100%;
+        transform: translateY(-50%);
+        list-style: none;
+    }
+    .right_div ul li{
+        display: inline-block;
+        width: 180px;
+        height: 180px;
+        margin-left: 20px;
+    }
+    .right_div img{
+        width: 180px;
+        height: 180px;
+        cursor: pointer;
+        transition: 0.3s ease-out all;
+    }
+    .right_div ul img:hover{
+        transform: scale(1.1);
+    }
+    .right_div li{
+            clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    }
+    .right_div li:nth-child(4){
+        margin-left: 124px;
+    }
 
     .slide3_title{
-    margin-top: 150px;
-    text-align: center;
+        margin-top: 150px;
+        text-align: center;
     }
     .slide3_title h1{
         color: #fff;
@@ -645,101 +634,260 @@ input::placeholder {
     transition:800ms ease all;
   }
 
-.slide2_main{
+    .slide2_main{
+        width: 100%;
+        height: 100%;
+    }
+    /* .slide2_main::after{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.4);
+    background-size: cover;
     width: 100%;
     height: 100%;
-}
-/* .slide2_main::after{
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.4);
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-} */
-.left_div{
-    width: 230.4px;
-    height: 100%;
-    float: left;
-    color: #fff;
-    padding-left: 38.4px;
-}
-.left_div h1{
-    font-size: 32px;
-}
-.right_div{
-    width: 537.6px;
-    padding-left: 89.6px;
-    height: 100%;
-    float: left;
-}
-.right_div::after{
-    clear:both;
-}
+    } */
+    .left_div{
+        width: 192px;
+        height: 100%;
+        float: left;
+        color: #fff;
+        margin-left: 19.2px;
+        margin-right: 19.2px;
+    }
+    .left_div h1{
+        font-size: 32px;
+    }
+    .right_div{
+        width: 448px;
+        margin-left: 44.8px;
+        margin-right: 44.8px;
+        height: 100%;
+        float: left;
+    }
+    .right_div::after{
+        clear:both;
+    }
 
-.left_div h1{
+    .left_div h1{
+        position: relative;
+        top: 30%;
+        transform: translateY(-50%);
+    }
+    .left_div p{
     position: relative;
     top: 30%;
     transform: translateY(-50%);
-}
-.left_div p{
-  position: relative;
-  top: 30%;
-  transform: translateY(-50%);
-}
-.left_div>button{
-  background:#d48d5d;
-  color:#fff;
-  border:none;
-  position:relative;
-  height:60px;
-  font-size:1.6em;
-  padding:0 2em;
-  cursor:pointer;
-  transition:800ms ease all;
-  outline:none;
-  margin-top: 300px;
-}
-.left_div>button:hover{
-  background:rgba(255, 255, 255, 0);
-  color:#fff;
-}
-.left_div>button:before,.left_div>button:after{
-  content:'';
-  position:absolute;
-  top:0;
-  right:0;
-  height:2px;
-  width:0;
-  background: #fff;
-  transition:400ms ease all;
-}
-.left_div>button:after{
-  right:inherit;
-  top:inherit;
-  left:0;
-  bottom:0;
-}
-.left_div>button:hover:before,.left_div>button:hover:after{
-  width:100%;
-  transition:800ms ease all;
-}
+    }
+    .left_div>button{
+    background:#d48d5d;
+    color:#fff;
+    border:none;
+    position:relative;
+    height:60px;
+    font-size:1.6em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+    margin-top: 300px;
+    }
+    .left_div>button:hover{
+    background:rgba(255, 255, 255, 0);
+    color:#fff;
+    }
+    .left_div>button:before,.left_div>button:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #fff;
+    transition:400ms ease all;
+    }
+    .left_div>button:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+    }
+    .left_div>button:hover:before,.left_div>button:hover:after{
+    width:100%;
+    transition:800ms ease all;
+    }
 
-#XL_BG{
-    display: none;
-}
+    #XL_BG{
+        display: none;
+    }
 
-#M_BG{
-    width: 100%;
-    height: 400px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    border: 1px solid #fff;
-}
+    #M_BG{
+        width: 100%;
+        height: 400px;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        /* overflow: hidden; */
+    }
+    #fadeimgList{
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    #fadeimgList img{
+        position: absolute;
+        display: none;
+        width: 100%;
+        height: 100%;
+    }
+    #fadeimgList img:nth-child(1){
+        display: block;
+    }
+    #prev{
+        position: absolute;
+        top: 0;
+        width: 30px;
+        height: 100%;
+        text-align: center;
+        left: 0;
+        padding-top: 170px;
+        color: #fff;
+        font-size: 32px;
+        z-index: 100;
+    }
+    #prev:hover{
+        background: linear-gradient( to left, rgba(255, 0, 0, 0)0%, rgba(5, 5, 5, 0.336)100% );
+        cursor: pointer;
+    }
+    #next{
+        position: absolute;
+        top: 0;
+        width: 30px;
+        height: 100%;
+        text-align: center;
+        right: 0;
+        padding-top: 170px;
+        color: #fff;
+        font-size: 32px;
+        z-index: 100;
+    }
+    #next:hover{
+        background: linear-gradient( to right, rgba(255, 0, 0, 0)0%, rgba(5, 5, 5, 0.336)100% );
+        cursor: pointer;
+    }
 
+    .slide3_title{
+        margin-top: 150px;
+        text-align: center;
+    }
+    .slide3_title h1{
+        color: #fff;
+        font-size: 64px !important;
+    }
+    .slide3_contents{
+        margin-top: 20px;
+        /* line-height: 30px; */
+        text-align: center;
+    }
+    .slide3_contents p{
+        color: #fff;
+    }
+  
+    #s3_main_Login{
+        margin-top: 100px;
+        text-align: center;
+    }
+    
+    #s3_main_Login>button{
+        background:#3134d8;
+        color:#fff;
+        border:none;
+        position:relative;
+        height:60px;
+        font-size:1.6em;
+        padding:0 2em;
+        cursor:pointer;
+        transition:800ms ease all;
+        outline:none;
+      }
+      #s3_main_Login>button:hover{
+        background:rgba(255, 255, 255, 0);
+        color:#fff;
+      }
+      #s3_main_Login>button:before,#s3_main_Login>button:after{
+        content:'';
+        position:absolute;
+        top:0;
+        right:0;
+        height:2px;
+        width:0;
+        background: #fff;
+        transition:400ms ease all;
+      }
+      #s3_main_Login>button:after{
+        right:inherit;
+        top:inherit;
+        left:0;
+        bottom:0;
+      }
+      #s3_main_Login>button:hover:before,#s3_main_Login>button:hover:after{
+        width:100%;
+        transition:800ms ease all;
+      }
+
+      #s3_main_Login2{
+        margin-top: 100px;
+        text-align: center;
+    }
+    
+    #s3_main_Login2>button{
+        background:#d83198;
+        color:#fff;
+        border:none;
+        position:relative;
+        height:60px;
+        font-size:1.6em;
+        padding:0 2em;
+        cursor:pointer;
+        transition:800ms ease all;
+        outline:none;
+      }
+      #s3_main_Login2>button:hover{
+        background:rgba(255, 255, 255, 0);
+        color:#fff;
+      }
+      #s3_main_Login2>button:before,#s3_main_Login2>button:after{
+        content:'';
+        position:absolute;
+        top:0;
+        right:0;
+        height:2px;
+        width:0;
+        background: #fff;
+        transition:400ms ease all;
+      }
+      #s3_main_Login2>button:after{
+        right:inherit;
+        top:inherit;
+        left:0;
+        bottom:0;
+      }
+      #s3_main_Login2>button:hover:before,#s3_main_Login2>button:hover:after{
+        width:100%;
+        transition:800ms ease all;
+      }
+
+      #s3_ul{
+          text-align: center;
+          list-style: none;
+      }
+      #s3_ul li{
+          display: inline-block;
+      }
+      #s3_ul li:nth-child(2){
+          margin-left: 50px;
+      }
 
 }
