슬라이드 박스 border-radius 5px적용

--- a/css/main.css
+++ b/css/main.css
@@ -741,6 +741,7 @@ input::placeholder {
         display: none;
         width: 100%;
         height: 100%;
+        border-radius: 5px;
     }
     #fadeimgList img:nth-child(1){
         display: block;
