--- a/css/main.css
+++ b/css/main.css
@@ -757,10 +757,12 @@ input::placeholder {
         color: #fff;
         font-size: 32px;
         z-index: 100;
+        opacity: 0.5;
     }
-    #prev:hover{
+    #prev:hover,#prevAR{
         background: linear-gradient( to left, rgba(255, 0, 0, 0)0%, rgba(5, 5, 5, 0.336)100% );
         cursor: pointer;
+        opacity: 1;
     }
     #next{
         position: absolute;
@@ -773,10 +775,12 @@ input::placeholder {
         color: #fff;
         font-size: 32px;
         z-index: 100;
+        opacity: 0.5;
     }
-    #next:hover{
+    #next:hover,#prevAR{
         background: linear-gradient( to right, rgba(255, 0, 0, 0)0%, rgba(5, 5, 5, 0.336)100% );
         cursor: pointer;
+        opacity: 1;
     }
 
     .slide3_title{
