nav 디자인 변경

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,32 @@
 /* My home nav*/
+header{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 10px 20px;
+    z-index: 10001;
+    /* background-color: rgba(0, 0, 0, 0.5); */
+}
+.nav_hamberger{
+    float: left;
+    cursor: pointer;
+}
+#nav_hamberger{
+    font-size: 32px;
+    color: #fff;
+}
+#nav_ul{
+    display: none;
+    list-style: none;
+    float: left;
+    margin-bottom: 0 !important;
+    padding-top: 3px;
+}
+#nav_ul li{
+    display: inline-block;
+    margin-left: 4vw;
+}
 @media (min-width: 1281px) {
     #mobile{
         display: none;
@@ -25,119 +53,6 @@ video{
     z-index: -9999;
     transform: translateX(-50%) translateY(-50%);
     filter: brightness(60%);
-}
-
-#nav{
-    min-width: 1280px;
-    height: 50px;
-    /* border: 1px solid #fff; */
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
-    z-index: 9999;
-}
-#left_nav{
-    width: 50%;
-    float: left;
-    overflow: hidden;
-}
-#left_nav img{
-    cursor: pointer;
-    padding-left: 10px;
-}
-#right_nav{
-    width: 50%;
-    float: left;
-}
-#right_nav::after{
-    clear: both;
-    content: "";
-    position: relative;
-}
-#right_nav ul{
-    padding: 23px 0 0 0;
-    list-style: none;
-    text-align: right;
-    position: relative;
-}
-#right_nav ul li{
-    display: inline-block;
-    font-weight: bold;
-    margin: 0 30px 0 30px;
-    position: relative;
-    top: -7px;
-}
-#right_nav li h5{
-    cursor: pointer;
-}
-
-/*검색*/
-.SearchBox{
-    width: 300px;
-    height: 30px;
-    float: left;
-    position: relative;
-    top: 5px;
-    margin-left: -100%;
-}
-#Search{
-    width: 300px;
-    height: 30px;
-    background-color: rgba(255, 255, 255, 0);
-    border: none;
-    border-bottom: 1px solid #fff;
-    color: #fff;
-}
-#Search:focus{
-    outline: none;
-}
-input[type="search"]::-webkit-search-cancel-button {
-    /* 검색창 X표시 지우기 */
-    display: none;
-  }
-#searchIcon{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    font-size: 20px;
-}
-#searchIcon:hover{
-    cursor: pointer;
-}
-input::placeholder {
-    color: rgba(255, 255, 255, 0.5);
-}
-.rotate{
-    animation:1s ease-in-out rotate1;
-}
-@keyframes rotate1{
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-        transform:rotate(360deg);
-    }
-}
-.back{
-    animation:1s ease-in-out rotate2;
-}
-@keyframes rotate2{
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-        transform:rotate(360deg);
-    }
 }
 
 #mainSlide{
@@ -449,118 +364,6 @@ input::placeholder {
         min-width: 768px;
         overflow: hidden;
     }
-    #nav{
-        min-width: 768px;
-        height: 50px;
-        /* border: 1px solid #fff; */
-        position: absolute;
-        top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        color: #fff;
-        z-index: 9999;
-    }
-    #left_nav{
-        width: 50%;
-        float: left;
-        overflow: hidden;
-    }
-    #left_nav img{
-        cursor: pointer;
-        padding-left: 10px;
-    }
-    #right_nav{
-        width: 50%;
-        float: left;
-    }
-    #right_nav::after{
-        clear: both;
-        content: "";
-        position: relative;
-    }
-    #right_nav ul{
-        padding: 23px 0 0 0;
-        list-style: none;
-        text-align: right;
-        position: relative;
-    }
-    #right_nav ul li{
-        display: inline-block;
-        font-weight: bold;
-        margin: 0 30px 0 30px;
-        position: relative;
-        top: -7px;
-    }
-    #right_nav li h5{
-        cursor: pointer;
-    }
-    /*검색*/
-.SearchBox{
-    width: 300px;
-    height: 30px;
-    float: left;
-    position: relative;
-    top: 5px;
-    margin-left: -100%;
-}
-#Search{
-    width: 300px;
-    height: 30px;
-    background-color: rgba(255, 255, 255, 0);
-    border: none;
-    border-bottom: 1px solid #fff;
-    color: #fff;
-}
-#Search:focus{
-    outline: none;
-}
-input[type="search"]::-webkit-search-cancel-button {
-    /* 검색창 X표시 지우기 */
-    display: none;
-  }
-#searchIcon{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    font-size: 20px;
-}
-#searchIcon:hover{
-    cursor: pointer;
-}
-input::placeholder {
-    color: rgba(255, 255, 255, 0.5);
-}
-.rotate{
-    animation:1s ease-in-out rotate1;
-}
-@keyframes rotate1{
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-        transform:rotate(360deg);
-    }
-}
-.back{
-    animation:1s ease-in-out rotate2;
-}
-@keyframes rotate2{
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-        transform:rotate(360deg);
-    }
-}
-
 #mainSlide{
     width: 768px;
     height: 600px;
@@ -941,137 +744,7 @@ input::placeholder {
         transform: translateX(-50%) translateY(-50%);
         filter: brightness(60%);
     }
-    #M_nav{
-        min-width: 360px;
-        height: 50px;
-        /* border: 1px solid #fff; */
-        position: absolute;
-        top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        color: #fff;
-        z-index: 9999;
-    }
-    #M_left_nav{
-        width: 50%;
-        float: left;
-        overflow: hidden;
-    }
-    #M_left_nav img{
-        cursor: pointer;
-        padding-left: 10px;
-    }
-    #M_right_nav{
-        width: 50%;
-        float: left;
-    }
-    #M_right_nav::after{
-        clear: both;
-        content: "";
-        position: relative;
-    }
-    #M_right_nav ul{
-        padding: 23px 5px 0 0;
-        list-style: none;
-        text-align: right;
-        position: relative;
-    }
-    #M_right_nav ul li{
-        display: inline-block;
-        font-weight: bold;
-        margin: 0 0 0 4px;
-        position: relative;
-        top: -7px;
-    }
-    #M_right_nav ul li:nth-child(1)::after{
-        position: absolute;
-        content: "";
-        background-color: rgb(173, 160, 160);
-        width: 1px;
-        height: 10px;
-        top: 5px;
-        right: -6px;
-    }
-    #M_right_nav ul li:nth-child(2)::after{
-        position: absolute;
-        content: "";
-        background-color: rgb(173, 160, 160);
-        width: 1px;
-        height: 10px;
-        top: 5px;
-        right: -6px;
-    }
-    #M_right_nav li h5{
-        font-size: 16px;
-        cursor: pointer;
-    }
     
-    /*검색*/
-    #M_SearchBox{
-        width: 100px;
-        height: 30px;
-        float: left;
-        position: relative;
-        top: 5px;
-        margin-left: -100%;
-    }
-    #M_Search{
-        width: 100px;
-        height: 30px;
-        background-color: rgba(255, 255, 255, 0);
-        border: none;
-        border-bottom: 1px solid #fff;
-        color: #fff;
-    }
-    #M_Search:focus{
-        outline: none;
-    }
-    input[type="search"]::-webkit-search-cancel-button {
-        /* 검색창 X표시 지우기 */
-        display: none;
-      }
-    #M_searchIcon{
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        font-size: 20px;
-    }
-    #M_searchIcon:hover{
-        cursor: pointer;
-    }
-    input::placeholder {
-        color: rgba(255, 255, 255, 0.5);
-    }
-    .rotate{
-        animation:1s ease-in-out rotate1;
-    }
-    @keyframes rotate1{
-        0%{
-            opacity: 0;
-        }
-        50%{
-            opacity: 0;
-        }
-        100%{
-            opacity: 1;
-            transform:rotate(360deg);
-        }
-    }
-    .back{
-        animation:1s ease-in-out rotate2;
-    }
-    @keyframes rotate2{
-        0%{
-            opacity: 0;
-        }
-        50%{
-            opacity: 0;
-        }
-        100%{
-            opacity: 1;
-            transform:rotate(360deg);
-        }
-    }
     .M_slide1_title{
         margin-top: 150px;
         text-align: center;
