--- a/css/note_main.css
+++ b/css/note_main.css
@@ -613,7 +613,7 @@ header{
         content: "";
     }
     #down_title{
-        padding: 9px 9px 8px 9px;
+        padding: 9px;
         height: 60px;
     }
     #down_title ul{
@@ -633,6 +633,7 @@ header{
         color: #7b858e;
         padding-top: 8px;
         font-size: 16px;
+        margin-bottom: 0;
     }
     #down_title_search{
         width: 40%;
