모바일 디자인 깨짐 현상 수정

--- a/css/note_main.css
+++ b/css/note_main.css
@@ -573,6 +573,7 @@ header{
         width: 100%;
         background-color: #fff;
         height: 120px;
+        position: relative;
         /* box-shadow: 1px 1px 5px rgb(0 0 0 / 50%); */
         border-bottom: 1px solid #DCDCDC;
     }
